# docify

./: .README.docify.md  Cargo.toml  README.md  publish.sh
.github/workflows/: ci.yaml
examples/: hidden.rs  hidden_sample.rs  integration.rs  samples.rs
macros/: Cargo.toml
macros/fixtures/: file_1.md
macros/src/: hidden.rs  lib.rs  tests.rs
src/: integration.rs  lib.rs
tests/: samples.rs
