[package]
name = "docify_macros"
version = "0.1.6"
edition = "2021"
authors = ["sam0x17"]
license = "MIT"
homepage = "https://sam0x17.dev"
repository = "https://github.com/sam0x17/docify"
description = "Support macros for docify."

[lib]
proc-macro = true

[dependencies]
derive-syn-parse = "0.1.5"
lazy_static = "1.4.0"
proc-macro2 = "1"
quote = "1"
regex = "1.8.1"
syn = { version = "2", features = ["full", "visit"] }
walkdir = "2"
colored = "2"
common-path = "1.0.0"
prettyplease = "0.2"
