[package]
name = "docify_macros"
version = "0.1.14"
edition = "2021"
authors = ["sam0x17"]
license = "MIT"
homepage = "https://sam0x17.dev"
repository = "https://github.com/sam0x17/docify"
description = "Support macros for docify."

[lib]
proc-macro = true

[dependencies]
derive-syn-parse = "0.1"
lazy_static = "1.4"
proc-macro2 = "1"
quote = "1"
regex = "1"
syn = { version = "2", features = ["full", "visit"] }
walkdir = "2"
common-path = "1"
termcolor = "1"
